<resources>
    <string name="app_name">Sahabat Movie</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_dont_have_an_account">Don\'t have an account?</string>
    <string name="title_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="title_menu_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="see_more">See more</string>
    <string name="welcome">Welcome,</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_address">Address</string>
    <string name="title_logout">Logout</string>
    <string name="title_update">Update</string>
    <string name="title_overview">Overview</string>
    <string name="title_genre_lang_release">%1$s | %2$s | %3$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_official_website">Official website:</string>
    <string name="hint_search">Search</string>
    <string name="about_app">About App</string>
    <string name="about_dev">About Dev</string>
    <string name="app_desc">Discover the movies within an app.</string>
    <string name="desc1">Sahabat Movie is an application that is useful for \ndisplaying Popular, Top Rated and Upcoming films.</string>
    <string name="desc2">Apart from that, Sahabat Movie can also be used to \nsearch for movies by entering the keywords the user wants.</string>
    <string name="desc3">This application was developed with the API from \nhttps://www.themoviedb.org/.</string>
    <string name="desc4">In this application there is also a login and register \nfeature using the room database.</string>
    <string name="name">Name</string>
    <string name="name_value">Nanda Iqbal Hanafi</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_value">31st December 2001</string>
    <string name="github">GitHub</string>
    <string name="github_value">nandaiqbalh</string>
    <string name="linkedin">LinkedIn</string>
    <string name="linkedin_value">nandaiqbalhanafii</string>
</resources>